# AniMerPlus

./: .gitignore  README.md  app.py  demo.py  eval.py  main.py  pyproject.toml  setup.py
amr/configs_hydra/experiment/: AniMerPlus.yaml  default.yaml  default_val.yaml
amr/datasets/: __init__.py  animal3d_dataset.py  animerpp_dataset.py  cub17_dataset.py  vitdet_dataset.py
amr/models/: __init__.py  animerpp.py  aves_warapper.py  losses.py  predictor.py
amr/models/backbones/: __init__.py  vit_moe.py
amr/models/heads/: __init__.py  aves_head.py  classifier_head.py
amr/utils/: __init__.py  mesh_renderer.py  renderer.py
