[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AniMer"
description = "AniMer as a package"
readme = "README.md"
version = "0.0.0"
dependencies = [
    "pydantic==2.10.6",
    "gdown",
    "numpy<2.0",
    "opencv-python",
    "pyrender",
    "pytorch-lightning",
    "scikit-image",
    "smplx==0.1.28",
    "yacs",
    "detectron2@git+https://github.com/facebookresearch/detectron2.git",
    "chumpy@git+https://github.com/mattloper/chumpy.git",
    "mmcv==1.3.9",
    "timm",
    "einops",
    "xtcocotools",
    "pandas",
    "open3d",
    "pytorch3d@git+https://github.com/facebookresearch/pytorch3d.git",
    "gradio",
]

[project.optional-dependencies]
all = [
    "hydra-core",
    "hydra-submitit-launcher",
    "hydra-colorlog",
    "pyrootutils",
    "rich",
]

[tool.setuptools.packages]
find = {}